fix(ui5-side-navigation): fix icon expand/collapse size (#13595)
fix(ui5-side-navigation): fix icon exapand/collapse size

--- a/packages/fiori/src/themes/SideNavigationItemBase.css
+++ b/packages/fiori/src/themes/SideNavigationItemBase.css
@@ -229,6 +229,7 @@ and there is an additional border that appears on hover. */
 }
 
 :host(:not([side-nav-collapsed])) .ui5-sn-item-toggle-icon::part(root) {
+	box-sizing: content-box;
 	padding-block: 0.25rem; /* height of the separator (the border left) should be --sapElement_Condensed_Height which is equal to 1.375rem (22px) */
 	border-inline-start: 0.0625rem solid var(--sapTextColor);
 	display: block;
